2014-09-08  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DBrowserWidget.h:
	* BrowserWindow.xml:
	* X3DBrowserWidget.cpp:
	* TextureEditor.xml:
	* HistoryView.cpp:
	* FileSaveDialog.xml:
	* FileSaveDialog.h:
	* FileOpenDialog.cpp:
	* FileSaveDialog.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DTextureEditorInterface.h:
	* X3DFileSaveDialogInterface.h:
	* X3DTextureEditorInterface.cpp:
	* X3DBrowserWindowInterface.cpp:
	* X3DMovieTextureEditor.h:
	* X3DImageTextureEditor.h:
	* FileImportDialog.cpp:
	* X3DFileSaveDialogInterface.cpp:
	* X3DMovieTextureEditor.cpp:
	* X3DImageTextureEditor.cpp: 

2014-09-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Image.h:
	* tab.x3dv:
	* BrowserHistory.cpp:
	* date.x3dv:
	* home.x3dv:
	* info.x3dv:
	* blank.x3dv:
	* gears.x3dv:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp:
	* History.h:
	* History.cpp:
	* url_error.x3dv:
	* HistoryView.cpp:
	* X3DOutlineTreeView.cpp:
	* PrecisionPlacementPanel.cpp: 

2014-09-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Accelerators.rc:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-09-06  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml: 

2014-09-06  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoHistory.h:
	* UndoHistory.cpp:
	* BrowserHistory.h:
	* BrowserWindow.cpp:
	* BrowserUserData.h:
	* BrowserHistory.cpp:
	* X3DBrowserWidget.h:
	* BrowserWindow.xml:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp:
	* HistoryView.cpp:
	* X3DBrowserWindowInterface.cpp: 

2014-09-05  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* main.cpp:
	* Image.h:
	* UndoHistory.h:
	* BrowserWindow.h:
	* BrowserHistory.h:
	* BrowserUserData.h:
	* BrowserWindow.cpp:
	* BrowserHistory.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserWidget.h:
	* BrowserWindow.xml:
	* favicon.png:
	* date.wrl:
	* home.wrl:
	* info.wrl:
	* date.x3dv:
	* home.x3dv:
	* info.x3dv:
	* blank.wrl: