@@ -104,6 +104,8 @@ private:
 
 		for (const auto & file : files)
 			browserWindow -> open (Glib::uri_unescape_string (file -> get_uri ()));
+
+		browserWindow -> getWindow () .present ();
 	}
 
 	virtual
