@@ -41,15 +41,23 @@
     </patterns>
   </object>
   <object class="GtkAdjustment" id="ImageAntialiasingAdjustment">
-    <property name="lower">1</property>
     <property name="upper">4</property>
-    <property name="value">2</property>
+    <property name="value">4</property>
     <property name="step_increment">1</property>
     <property name="page_increment">1</property>
   </object>
+  <object class="GtkSpinButton" id="AntialiasingSpinButton">
+    <property name="visible">True</property>
+    <property name="can_focus">True</property>
+    <property name="halign">start</property>
+    <property name="text" translatable="yes">2</property>
+    <property name="adjustment">ImageAntialiasingAdjustment</property>
+    <property name="numeric">True</property>
+    <property name="value">4</property>
+  </object>
   <object class="GtkAdjustment" id="ImageCompressionAdjustment">
     <property name="upper">100</property>
-    <property name="value">75</property>
+    <property name="value">60</property>
     <property name="step_increment">1</property>
     <property name="page_increment">1</property>
   </object>
@@ -245,7 +253,7 @@
                     <property name="hexpand">True</property>
                     <property name="text" translatable="yes">1024</property>
                     <property name="adjustment">ImageWidthAdjustment</property>
-                    <property name="climb_rate">0.01</property>
+                    <property name="climb_rate">0.040000000000000001</property>
                     <property name="numeric">True</property>
                     <property name="value">1024</property>
                   </object>
@@ -263,7 +271,7 @@
                     <property name="halign">start</property>
                     <property name="text" translatable="yes">512</property>
                     <property name="adjustment">ImageHeightAdjustment</property>
-                    <property name="climb_rate">0.01</property>
+                    <property name="climb_rate">0.040000000000000001</property>
                     <property name="numeric">True</property>
                     <property name="value">576</property>
                   </object>
@@ -283,23 +291,6 @@
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">2</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkSpinButton" id="spinbutton3">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="halign">start</property>
-                    <property name="text" translatable="yes">2</property>
-                    <property name="adjustment">ImageAntialiasingAdjustment</property>
-                    <property name="numeric">True</property>
-                    <property name="value">2</property>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">3</property>
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
@@ -346,7 +337,8 @@
                         <property name="can_focus">True</property>
                         <property name="tooltip_text" translatable="yes">PNG/JPEG/MIFF compression level</property>
                         <property name="adjustment">ImageCompressionAdjustment</property>
-                        <property name="round_digits">1</property>
+                        <property name="round_digits">0</property>
+                        <property name="digits">0</property>
                       </object>
                       <packing>
                         <property name="expand">True</property>
@@ -358,6 +350,50 @@
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">4</property>
+                    <property name="width">1</property>
+                    <property name="height">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkBox" id="ImageAntialiasingBox">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="spacing">8</property>
+                    <child>
+                      <object class="GtkSpinButton" id="spinbutton3">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="halign">start</property>
+                        <property name="text" translatable="yes">4</property>
+                        <property name="adjustment">ImageAntialiasingAdjustment</property>
+                        <property name="numeric">True</property>
+                        <property name="value">4</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkScale" id="scale2">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="tooltip_text" translatable="yes">PNG/JPEG/MIFF compression level</property>
+                        <property name="adjustment">ImageAntialiasingAdjustment</property>
+                        <property name="round_digits">0</property>
+                        <property name="digits">0</property>
+                      </object>
+                      <packing>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">3</property>
                     <property name="width">1</property>
                     <property name="height">1</property>
                   </packing>
@@ -485,21 +521,6 @@
                 <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="ImageOptionsButton">
-                <property name="label">gtk-preferences</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="halign">start</property>
-                <property name="use_stock">True</property>
-                <signal name="clicked" handler="on_image_options_clicked" swapped="no"/>
-              </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">1</property>
               </packing>
             </child>
           </object>
