@@ -1,5 +1,15 @@
 2014-09-08  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* FrameBuffer.h:
+	* FrameBuffer.cpp:
+	* X3DRenderer.cpp:
+	* X3DBrowserContext.h:
+	* X3DBrowserContext.cpp:
+	* X3DCoreContext.h:
+	* X3DCoreContext.cpp: 
+
+2014-09-08  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Makefile.am:
 	* libtitania-x3d.cproj:
 	* Browser.h:
