@@ -1,5 +1,15 @@
 2014-09-08  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* main.cpp:
+	* home.x3dv:
+	* FileSaveDialog.xml:
+	* FileSaveDialog.h:
+	* FileSaveDialog.cpp:
+	* X3DFileSaveDialogInterface.h:
+	* X3DFileSaveDialogInterface.cpp: 
+
+2014-09-08  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* BrowserWindow.h:
 	* BrowserWindow.cpp:
 	* X3DBrowserWidget.h:
